--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.jackson-annotations-2.8.0.rc2.jar=libs\\jackson-annotations-2.8.0.rc2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +48,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.EclipseLink-GlassFish-v3.classpath}:\
     ${libs.spring-framework400.classpath}:\
-    ${libs.spring-webmvc4.0.classpath}
+    ${libs.spring-webmvc4.0.classpath}:\
+    ${file.reference.jackson-annotations-2.8.0.rc2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
