--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.2.jar=libs\\commons-fileupload-1.3.2.jar
+file.reference.commons-io-2.4.jar=libs\\commons-io-2.4.jar
 file.reference.jackson-annotations-2.8.0.rc2.jar=libs\\jackson-annotations-2.8.0.rc2.jar
 includes=**
 j2ee.compile.on.save=true
@@ -49,7 +51,9 @@ javac.classpath=\
     ${libs.EclipseLink-GlassFish-v3.classpath}:\
     ${libs.spring-framework400.classpath}:\
     ${libs.spring-webmvc4.0.classpath}:\
-    ${file.reference.jackson-annotations-2.8.0.rc2.jar}
+    ${file.reference.jackson-annotations-2.8.0.rc2.jar}:\
+    ${file.reference.commons-fileupload-1.3.2.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
