--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Nico-Desktop\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3910414904.properties
+deploy.ant.properties.file=/Users/nico/Library/Application Support/NetBeans/8.2/config/GlassFishEE6/Properties/gfv3-1084349278.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Program Files/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
-user.properties.file=C:\\Users\\Nico-Desktop\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+j2ee.server.domain=/Applications/glassfish4/glassfish/domains/domain1
+j2ee.server.home=/Applications/glassfish4/glassfish
+j2ee.server.instance=[/Applications/glassfish4/glassfish:/Applications/glassfish4/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/Applications/glassfish4
+javac.debug=true
+javadoc.preview=true
+selected.browser=Chrome
+user.properties.file=/Users/nico/Library/Application Support/NetBeans/8.2/build.properties
