--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,7 @@ j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:$
 j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.eclipselinkmodelgen.classpath}:\
     ${libs.eclipselink.classpath}:\
@@ -53,7 +53,8 @@ javac.classpath=\
     ${libs.spring-webmvc4.0.classpath}:\
     ${file.reference.jackson-annotations-2.8.0.rc2.jar}:\
     ${file.reference.commons-fileupload-1.3.2.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -82,7 +83,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
